# rl-toutetsu

./: .gitignore  CMakeLists.txt  icon.rc
src/common/: app.cpp  app.h  main.cpp  sdl_pointers.h  singleton.h
src/engine/: animated_sprite.cpp  entity.cpp  entity.h  game_object.cpp  game_object.h  scene.cpp  scene.h  scene_manager.cpp  scene_manager.h  sprite.cpp  sprite.h  state_sprite.cpp  state_sprite.h
src/engine/app/: app.cpp  app.h
src/engine/camera/: camera.cpp  camera.h  ui_camera.h
src/engine/events/: event.h  input_manager.cpp  input_manager.h
src/engine/game_object/: game_object.cpp  game_object.h  text_object.cpp  text_object.h
src/engine/input/: input_manager.cpp  input_manager.h
src/engine/misc/: logger.h  sdl_pointers.h  timer.h
src/engine/scene_manager/: scene.cpp  scene.h  scene_manager.cpp  scene_manager.h
src/engine/sprite/: animated_sprite.cpp  animated_sprite.h  animated_state_sprite.cpp  animated_state_sprite.h  blank_sprite.h  playable_sprite.cpp  playable_sprite.h  sprite.cpp  sprite.h  state_sprite.cpp  text_sprite.cpp  text_sprite.h
src/game/: camera.cpp  camera.h  game_object.cpp  game_object.h  main.cpp  map.h  scene_main_menu.cpp  scene_main_menu.h  tile.h  ui_camera.cpp  ui_camera.h
src/game/enemy/: enemies.h  enemy.h  enemy_data.h  random_enemy.h  random_enemy_template.h  test_enemy.h  test_enemy_2.h
src/game/game_map/: map.cpp  map.h  map_object.h  scene_game_map.cpp  scene_game_map.h  tile.cpp  tile.h  ui.cpp  ui.h
src/game/game_state/: game_state.cpp  game_state.h  inventory.cpp  inventory.h  inventory_slot.h  inventory_view.cpp  inventory_view.h  player_stats.cpp  player_stats.h  stats_set.h
src/game/item/: blank_item.h  equippable_items.h  item.h  item_data.h  random_item.h  random_item_template.h  spell_items.h  spell_weapon.h  test_item.h  test_item_2.h
src/game/loaders/: scene_loader.cpp  scene_loader.h  sprite_loader.cpp  sprite_loader.h
src/game/main_menu/: play_button.cpp  play_button.h  quit_button.cpp  quit_button.h  scene_main_menu.cpp  scene_main_menu.h
src/game/map_algorithms/: fully_random_map.h
src/game/scene_fight/: scene_fight.cpp  scene_fight.h  spell_button.cpp  spell_button.h  (+1 more)
src/sprites/: animated_sprite.cpp  animated_sprite.h  animated_state_sprite.cpp  sprite.cpp  sprite.h  state_sprite.cpp
src/util/: logger.cpp  logger.h
(+41 files in other folders)
